--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
+    "isbnjs": "^0.2.2",
     "mongoose": "^4.1.0",
+    "node-isbn": "^1.2.0",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0"
   },
